--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ before_script:
 - docker-compose up -d
 script:
   - mix compile
-  - MIX_ENV=dev mix dialyzer --halt-exit-status
+    #  - MIX_ENV=dev mix dialyzer --halt-exit-status
   - mix ecto.create
   - mix ecto.migrate
   - mix fformat --check-formatted
