--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,6 @@ services:
   localstack:
     image: localstack/localstack
     environment:
-      SERVICES: sqs:27345
+      - SERVICES=sqs:27345
     ports:
       - "27345:27345"
